@@ -1,4 +1,4 @@
-// readrc.c [ 0.4.2 ]
+// readrc.c [ 0.4.3 ]
 
 static int new_mode;
 /* *********************** Read Config File ************************ */
@@ -97,7 +97,7 @@ void read_rcfile() {
                     strncpy(dummy, strstr(buffer, " ")+1, strlen(strstr(buffer, " ")+1)-1);
                     dummy[strlen(dummy)-1] = '\0';
                     dummy2 = strdup(dummy);
-                    for(i=0;i<4;i++) {
+                    for(i=0;i<5;i++) {
                         dummy3 = strsep(&dummy2, ",");
                         if(strlen(dummy3) < 1)
                             theme[i].modename = strdup(defaultmodename[i]);
